[gd_scene load_steps=13 format=2]

[ext_resource path="res://spaceship1.png" type="Texture" id=1]
[ext_resource path="res://platform.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Crystal.tscn" type="PackedScene" id=4]
[ext_resource path="res://BitcountSingle-SemiBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://space-bg3.png" type="Texture" id=6]
[ext_resource path="res://Asteroid.tscn" type="PackedScene" id=7]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.5611, 11.4985 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 518.16, 10 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
GoodDrop = ExtResource( 4 )
BadDrop = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 8 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1360, 951 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]

[node name="platform" type="Area2D" parent="."]
position = Vector2( 489.326, 477.621 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="platform"]
position = Vector2( -14.6084, 56.8892 )
shape = SubResource( 1 )

[node name="platform" type="Sprite" parent="platform"]
position = Vector2( -29.1792, 47.5277 )
scale = Vector2( 1.4089, 1.09491 )
texture = ExtResource( 1 )

[node name="CrystalTimer" type="Timer" parent="."]
autostart = true

[node name="Menu" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_right = 152.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -266.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
text = "Life: 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.5
margin_top = -77.5
margin_right = 346.5
margin_bottom = 77.5
custom_fonts/font = SubResource( 3 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Catcher" type="Area2D" parent="."]
position = Vector2( 497.803, 598.212 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher"]
position = Vector2( 16.9706, -2.82843 )
shape = SubResource( 4 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.05945
margin_bottom = -1.05945
color = Color( 0.105882, 0.101961, 0.0980392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_left = 0.330844
anchor_top = 0.632315
anchor_right = 0.330844
anchor_bottom = 0.632315
margin_left = -339.0
margin_top = -378.0
margin_right = 1161.0
margin_bottom = 822.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="body_entered" from="platform" to="." method="_on_platform_body_entered"]
[connection signal="timeout" from="CrystalTimer" to="." method="_on_CrystalTimer_timeout"]
[connection signal="body_entered" from="Catcher" to="." method="_on_Catcher_body_entered"]
